Delete old workflow code